--- a/mrpizzasgt_v61_7.html
+++ b/mrpizzasgt_v61_7.html
@@ -2057,8 +2057,175 @@ html[data-theme="dark"] h2.menu-section-title,
 <meta content="yes" name="apple-mobile-web-app-capable"/>
 <meta content="default" name="apple-mobile-web-app-status-bar-style"/>
 <meta content="Mr Pizza GT" name="apple-mobile-web-app-title"/>
+
+<style id="appLoadingStyles">
+  /* ===========================
+     Loader GLOBAL (App Loading)
+     Reutilizable: Empresas, Contacto, futuro checkout
+     =========================== */
+  body.is-app-loading{ overflow:hidden; }
+
+  .app-loading{
+  pointer-events: all;
+
+    position: fixed;
+    inset: 0;
+    z-index: 99999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 24px;
+    background: rgba(0,0,0,.55);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+  }
+  
+
+/* v61_6: Loader global minimal (solo sobre, sin atenuar ni tarjeta) */
+.app-loading{
+  background: transparent !important;   /* sin atenuar */
+  backdrop-filter: none !important;
+}
+.app-loading svg{
+  width: 160px;
+  height: auto;
+  display:block;
+}
+.app-loading.is-hidden{ display:none; }
+
+  .app-loading__card{
+    width: min(520px, 92vw);
+    border-radius: 18px;
+    background: rgba(18,18,18,.88);
+    border: 1px solid rgba(255,255,255,.12);
+    box-shadow: 0 18px 60px rgba(0,0,0,.45);
+    padding: 22px 18px 18px;
+    text-align: center;
+    color: #fff;
+  }
+  .app-loading__title{
+    font-weight: 800;
+    letter-spacing: .2px;
+    margin: 6px 0 4px;
+    font-size: 18px;
+  }
+  .app-loading__text{
+    opacity: .9;
+    margin: 0 0 8px;
+    font-size: 14px;
+  }
+  .app-loading__hint{
+    opacity: .7;
+    margin: 0;
+    font-size: 12px;
+  }
+
+  /* Envelope loader (adaptado a CSS puro, sin SCSS) */
+  .app-loading svg{
+    display:block;
+    width: min(260px, 70vw);
+    height: auto;
+    margin: 0 auto 10px;
+    filter: drop-shadow(0 10px 20px rgba(0,0,0,.35));
+    animation: envelope-enter 1.2s ease-out both, envelope-pulse 2s 1.6s ease-in-out infinite;
+  }
+
+  .app-loading .st0{ fill:#b3b3b3 }
+  .app-loading .st1{ fill:#e6e6e6 }
+  .app-loading .st2{ fill:#ccc }
+
+  /* Colores “lighten/darken” aproximados */
+  .app-loading{ --env:#d30133; --env-light:#ff4d6d; --env-mid:#d30133; --env-dark:#9d0026; }
+
+  #letter-top{ animation: letter-top 1.2s ease-out both; transform-origin: 50% 32%; }
+  #letter-top-2{ animation: letter-top-2 1.2s ease-out both; transform-origin: 50% 32%; }
+  #letter-bottom{ animation: letter-bottom 1.2s ease 0.6s both; }
+  #envelope-back{ animation: envelope-back .8s ease 0.9s both; }
+
+  #envelope-top{ animation: envelope-top 1s ease-in-out 1.1s both; transform-origin: 50% 30%; }
+  #envelope-top-shadow{ animation: envelope-top-shadow 1s ease-in-out 1.1s both; transform-origin: 50% 30%; }
+  #envelope-right{ animation: envelope-right 1s ease-in-out 1.1s both; transform-origin: 69.5% 50%; }
+  #envelope-left{ animation: envelope-left 1s ease-in-out 1.1s both; transform-origin: 30.5% 50%; }
+  #envelope-bottom{ animation: envelope-bottom 1s ease-in-out 1.1s both; transform-origin: 50% 70%; }
+
+  @keyframes envelope-back{ from{opacity:0} to{opacity:1} }
+  @keyframes envelope-enter{
+    0%{ opacity:0; transform: scale(.85) translateY(8px); }
+    100%{ opacity:1; transform: scale(1) translateY(0); }
+  }
+  @keyframes envelope-pulse{
+    0%,25%{ transform: scale(1); }
+    50%{ transform: scale(.97); }
+    100%{ transform: scale(1); }
+  }
+
+  @keyframes letter-top{
+    0%{ transform: scaleY(-1) skewX(0deg); fill:#e6e6e6; }
+    50%{ transform: scaleY(0) skewX(-10deg); fill:#cfcfcf; }
+    100%{ transform: scaleY(1) skewX(0deg); fill:#e6e6e6; }
+  }
+  @keyframes letter-top-2{
+    0%{ transform: scaleY(-1) skewX(0deg); fill:#e6e6e6; }
+    50%{ transform: scaleY(0) skewX(10deg); fill:#cfcfcf; }
+    100%{ transform: scaleY(1) skewX(0deg); fill:#e6e6e6; }
+  }
+  @keyframes letter-bottom{ from{fill:#e6e6e6} to{fill:#d9d9d9} }
+
+  @keyframes envelope-top{
+    0%{ transform: scaleY(0); fill: var(--env-light); }
+    50%{ transform: scaleY(-1); fill: var(--env-mid); }
+    100%{ transform: scaleY(1); fill: var(--env-mid); }
+  }
+  @keyframes envelope-top-shadow{
+    0%{ opacity:0; }
+    65%{ opacity:0; transform: scaleY(1.5); }
+    100%{ opacity:.25; transform: scaleY(1); }
+  }
+  @keyframes envelope-right{
+    0%{ transform: scaleX(0); fill:#e9e9e9; }
+    50%{ transform: scaleX(-1); fill:#ccc; }
+    100%{ transform: scaleX(1); fill:#bdbdbd; }
+  }
+  @keyframes envelope-left{
+    0%{ transform: scaleX(0); fill:#e9e9e9; }
+    50%{ transform: scaleX(-1); fill:#ccc; }
+    100%{ transform: scaleX(1); fill:#bdbdbd; }
+  }
+  @keyframes envelope-bottom{
+    0%{ transform: scaleY(0); fill:#8f8f8f; }
+    50%{ transform: scaleY(-1); fill:#b3b3b3; }
+    100%{ transform: scaleY(1); fill:#c8c8c8; }
+  }
+
+  /* Accesibilidad: reduce motion */
+  @media (prefers-reduced-motion: reduce){
+    .app-loading svg, #letter-top, #letter-top-2, #letter-bottom, #envelope-back,
+    #envelope-top, #envelope-top-shadow, #envelope-right, #envelope-left, #envelope-bottom{
+      animation: none !important;
+    }
+  }
+</style>
+
 </head>
 <body>
+
+  <!-- Loader GLOBAL (reutilizable en toda la app) -->
+  <div id="appLoading" class="app-loading is-hidden" role="status" aria-live="polite" aria-hidden="true">
+    
+  <svg id="envelope" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 500" aria-hidden="true">
+        <path class="st0" d="M440 350H200c-2.8 0-5-2.2-5-5V155c0-2.8 2.2-5 5-5h240c2.8 0 5 2.2 5 5v190c0 2.8-2.2 5-5 5z" id="envelope-back"/>
+        <path id="letter-bottom" class="st1" d="M198 156h243v189H198z"/>
+        <path id="letter-top" class="st1" d="M198 156h243v189H198z"/>
+        <path id="letter-top-2" class="st1" d="M198 156h243v189H198z"/>
+        <path class="st2" d="M332.2 244.7c2-11.9 109-93.7 109-93.7 2.1 0 3.8 1.5 3.8 3.3v191.9c0 1.8-1.7 3.3-3.8 3.3 0 0-108.2-79.4-109-94.2-.1-2.1-.3-8.6 0-10.6z" id="envelope-right"/>
+        <path class="st2" d="M307.8 255.8c-2 11.9-109 93.7-109 93.7-2.1 0-3.8-1.5-3.8-3.3V154.3c0-1.8 1.7-3.3 3.8-3.3 0 0 108.2 79.4 109 94.2.1 2.1.3 8.6 0 10.6z" id="envelope-left"/>
+        <path class="st0" d="M327 249.3c15 1.7 118 97.3 118 97.3 0 1.9-1.9 3.4-4.2 3.4H199.2c-2.3 0-4.2-1.5-4.2-3.4 0 0 100-96.6 118.6-97.3 2.7-.2 10.9-.3 13.4 0z" id="envelope-bottom"/>
+        <path d="M319.4 295c-3.1 0-7.6-.6-11.1-4.1C274 257 195 154.3 195 154.3c0-2.4 1.9-4.3 4.2-4.3h241.6c2.3 0 4.2 1.9 4.2 4.3 0 0-82 103.6-115.5 136.6-3.1 3-7.1 4.1-10.1 4.1z" fill="gray" id="envelope-top-shadow"/>
+        <path class="st1" d="M319.4 291c-3.1 0-7.6-.5-11.1-4C274 254 195 154.2 195 154.2c0-2.3 1.9-4.2 4.2-4.2h241.6c2.3 0 4.2 1.9 4.2 4.2 0 0-82 100.8-115.5 132.8-3.1 2.9-7.1 4-10.1 4z" id="envelope-top"/>
+      </svg>
+</div>
+
+
 <header>
 <div class="container row">
 <div class="brand">
@@ -3847,31 +4014,37 @@ if(document.readyState === 'loading'){
   const d = collectBizData();
   if(!validateBiz(d)) return;
 
+  // Loader GLOBAL
+  showAppLoading("Enviando cotización por correo…", "Enviando cotización…");
+
   // Mensaje con el formato ya aprobado (mismo modelo que WhatsApp)
   const msg = buildBizMessage(d);
 
-  // Overlay simple para indicar procesamiento (solo en modal Empresas)
-  let overlay;
+  // Bloquear interacciones dentro del modal mientras se envía (sin overlay visible)
+  let blocker;
   try{
-    overlay = document.getElementById("bizSendOverlay");
-    if(!overlay){
-      overlay = document.createElement("div");
-      overlay.id = "bizSendOverlay";
-      overlay.className = "biz-send-overlay";
-      overlay.innerHTML = '<div class="biz-send-loader" aria-label="Enviando"></div><div class="biz-send-text">Enviando cotización…</div>';
-      const modal = document.getElementById("bizModal");
-      if(modal) modal.appendChild(overlay);
+    const modal = document.getElementById("bizModal");
+    blocker = document.getElementById("bizSendBlocker");
+    if(!blocker && modal){
+      blocker = document.createElement("div");
+      blocker.id = "bizSendBlocker";
+      blocker.className = "biz-send-blocker";
+      modal.appendChild(blocker);
     }
-    overlay.classList.add("show");
+    if(blocker) blocker.classList.add("show");
   }catch(e){}
 
-  // UI: bloquear boton mientras envia + mini loader en el texto
+  // UI: deshabilitar botones + texto "enviando"
   const prevHtml = bizSendEmail.innerHTML;
+  const prevCancelDisabled = bizModalCancel ? bizModalCancel.disabled : null;
+  const prevWaDisabled = bizSendWa ? bizSendWa.disabled : null;
   try{
     bizSendEmail.disabled = true;
     bizSendEmail.classList.add("is-loading");
-    bizSendEmail.innerHTML = '<span>Enviando…</span><span class="btn-spinner" aria-hidden="true"></span>';
+    bizSendEmail.innerHTML = '<span>Enviando correo…</span>';
   }catch(e){}
+  try{ if(bizModalCancel) bizModalCancel.disabled = true; }catch(e){}
+  try{ if(bizSendWa) bizSendWa.disabled = true; }catch(e){}
 
   try{
     const fd = new FormData();
@@ -3897,7 +4070,7 @@ if(document.readyState === 'loading'){
     if(res.ok){
       const em = (d.email || "").trim();
       showToast(`Hemos recibido tu email desde ${em || "tu correo"}. Te responderemos en breve.`);
-      // Limpia campos tras envio exitoso
+      // Limpia campos tras envío exitoso
       try{
         if(bizForm) bizForm.reset();
         document
@@ -3911,17 +4084,49 @@ if(document.readyState === 'loading'){
   }catch(err){
     showToast("Error de red. Revisa tu conexión.");
   }finally{
-    // Restaurar UI
+    // Restaurar UI (si el modal sigue abierto)
     try{
       bizSendEmail.disabled = false;
       bizSendEmail.classList.remove("is-loading");
       bizSendEmail.innerHTML = prevHtml;
     }catch(e){}
     try{
-      if(overlay) overlay.classList.remove("show");
+      if(bizModalCancel && prevCancelDisabled !== null) bizModalCancel.disabled = prevCancelDisabled;
     }catch(e){}
+    try{
+      if(bizSendWa && prevWaDisabled !== null) bizSendWa.disabled = prevWaDisabled;
+    }catch(e){}
+    try{
+      if(blocker) blocker.classList.remove("show");
+    }catch(e){}
+    // Apagar loader global
+    hideAppLoading();
   }
 });
+
+    // ===========================
+    // Loader GLOBAL (reutilizable)
+    // ===========================
+    function showAppLoading(text, title){
+      const el = document.getElementById('appLoading');
+      if(!el) return;
+      const t = document.getElementById('appLoadingText');
+      const h = document.getElementById('appLoadingTitle');
+      if(h) h.textContent = (title || "Enviando…");
+      if(t) t.textContent = (text || "Estamos procesando tu solicitud.");
+      document.body.classList.add('is-app-loading');
+      el.classList.remove('is-hidden');
+      el.setAttribute('aria-hidden','false');
+    }
+    function hideAppLoading(){
+      const el = document.getElementById('appLoading');
+      if(!el) return;
+      el.classList.add('is-hidden');
+      el.setAttribute('aria-hidden','true');
+      document.body.classList.remove('is-app-loading');
+    }
+
+
 
 // Si el usuario presiona Enter en un campo, no enviar por default
     if(bizForm) bizForm.addEventListener('submit', (e)=>{ e.preventDefault(); });
