Fix: add Alitas cotizacion

--- a/index.html
+++ b/index.html
@@ -3120,8 +3120,7 @@ html[data-theme="dark"] h2.menu-section-title,
 <button aria-label="Cerrar" class="modal-x" id="bizModalClose" type="button">✕</button>
 <div class="modal-head" style="padding: 8px 8px 4px;">
 <div class="modal-kicker">Empresas • Cotización</div>
-<h3 class="modal-title" id="bizModalTitle" style="margin:0 0 6px;">Cotizá tu evento</h3>
-<p class="modal-sub" style="margin:0;">Completá lo básico y elegí cómo enviarlo: WhatsApp o correo.</p>
+<h3 class="modal-title" id="bizModalTitle" style="margin:0;">Cotizá tu evento</h3>
 </div>
 <form autocomplete="on" class="modal-form" id="bizForm" style="padding: 0 8px 6px;">
 <div class="biz-modal-grid">
@@ -3221,6 +3220,7 @@ html[data-theme="dark"] h2.menu-section-title,
 <label class="biz-check"><input id="bizProdToldos" type="checkbox" value="Toldos"/> <span>Toldos</span></label>
 <label class="biz-check"><input id="bizProdCarpachos" type="checkbox" value="Carpachos"/> <span>Carpachos</span></label>
 <label class="biz-check"><input id="bizProdNachos" type="checkbox" value="Nachos"/> <span>Nachos</span></label>
+<label class="biz-check"><input id="bizProdAlitas" type="checkbox" value="Alitas"/> <span>Alitas</span></label>
 </div>
 <div aria-live="polite" class="field-error" id="bizErrProducts"></div>
 </div>
